templates/storage-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: storage
spec:
  type: ExternalName
  externalName: 192.168.1.52
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: storage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts: 
      - "*.norseamerican.com"
      secretName: norseamerican-wildcard
  rules:
    - host: storage.norseamerican.com
      http:
        paths:
          - path: /
            backend:
              serviceName: storage
              servicePort: 80
