templates/unifi-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  type: ExternalName
  externalName: 192.168.1.254
  ports:
    - port: 8443
      name: unifi
    - port: 443
      name: cloudkey
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: unifi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts: 
      - "*.norseamerican.com"
      secretName: norseamerican-wildcard
  rules:
    - host: unifi.norseamerican.com
      http:
        paths:
          - path: /
            backend:
              serviceName: unifi
              servicePort: unifi
    - host: cloudkey.norseamerican.com
      http:
        paths:
          - path: /
            backend:
              serviceName: unifi
              servicePort: cloudkey
